cluster/argocd/resources/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: le-acme
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # # If you encounter a redirect loop or are getting a 307 response code
    # # then you need to force the nginx ingress to connect to the backend using HTTPS.
    # #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.michaelbui.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.michaelbui.dk
    secretName: argocd-http-tls
